--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -5,29 +5,52 @@
     </mat-card-header>
 
     <mat-card-content>
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <mat-form-field appearance="fill" class="w-100">
-            <mat-label>Renglones</mat-label>
-            <mat-select>
-              <mat-option> Hola </mat-option>
-            </mat-select>
-          </mat-form-field>
+      <form [formGroup]="form">
+        <!-- Primer Renglon -->
+        <div class="row">
+          <!-- Renglones -->
+          <div class="col-sm-6 form-group">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Renglones</mat-label>
+              <mat-select formControlName="rows">
+                <mat-option
+                  *ngFor="let opt of gameConfig?.rowOptions"
+                  [value]="opt"
+                  >{{opt}}</mat-option
+                >
+              </mat-select>
+              <mat-error *ngIf="form.get('rows').hasError('required')">
+                Seleccione una opción
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <!-- /Renglones -->
+
+          <!-- Columnas -->
+          <div class="col-sm-6 form-group">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Columnas</mat-label>
+              <mat-select formControlName="cols">
+                <mat-option
+                  *ngFor="let opt of gameConfig?.colOptions"
+                  [value]="opt"
+                  >{{opt}}</mat-option
+                >
+              </mat-select>
+              <mat-error *ngIf="form.get('cols').hasError('required')">
+                Seleccione una opción
+              </mat-error>
+            </mat-form-field>
+          </div>
+          <!-- /Columnas -->
         </div>
-        <div class="col-sm-6 form-group">
-          <mat-form-field appearance="fill" class="w-100">
-            <mat-label>Columnas</mat-label>
-            <mat-select>
-              <mat-option> Hola 2 </mat-option>
-            </mat-select>
-          </mat-form-field>
-        </div>
-      </div>
+        <!-- /Primer Renglon -->
+      </form>
     </mat-card-content>
   </mat-card>
 
   <div class="d-flex justify-content-center mt-5">
-    <button class="btn btn-success btn-lg">
+    <button class="btn btn-success btn-lg" (click)="jugar()">
       <fa-icon [icon]="faPlay" class="mr-2"></fa-icon>
       Jugar!
     </button>
