--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
-
+<div class="pages-container">
+  <router-outlet></router-outlet>
+</div>
