--- a/src/app/components/game-card/game-card.component.html
+++ b/src/app/components/game-card/game-card.component.html
@@ -1,8 +1,9 @@
 <div class="card alert-danger">
   <div class="image-container d-flex justify-content-center align-items-center">
     <img
-      src="assets/images/logo_memoria.png"
-      alt="Card image cap"
+      *ngIf="urlImagen"
+      [src]="'assets/images/tarjetas/' + urlImagen"
+      alt="card-image"
       />
     <!--<fa-icon [icon]="faSyncAlt" size="3x"></fa-icon> -->
   </div>
