Lógica del juego implementada.
Estilos y comportamiento de las tarjetas conforme progresa el juego.

--- a/src/app/components/game-card/game-card.component.css
+++ b/src/app/components/game-card/game-card.component.css
@@ -2,15 +2,17 @@
   border-radius: 0 !important;
 }
 
-.card:hover {
-  transform: scale(1.05);
-  transition: ease-in 0.2s;
+.card:hover:not(.alert-success, .alert-warning, .alert-danger) {
   background-color: #cce5ff;
   cursor: pointer;
 }
 
 .card div.image-container {
   height: 70px;
+}
+
+.card.alert-success {
+  cursor: default;
 }
 
 img {
