Guard y validación de tablero.
Las opciones de renglones y columnas del tablero se filtran
dinámicamente para no permitir que exista un total de tarjetas impar.
Guard para no permitir ir a la pantalla del juego sin haber definido
antes el tamaño del tablero.

--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -12,9 +12,9 @@
           <div class="col-sm-6 form-group">
             <mat-form-field appearance="fill" class="w-100">
               <mat-label>Renglones</mat-label>
-              <mat-select formControlName="rows">
+              <mat-select formControlName="rows" (selectionChange)="changeRenglones()">
                 <mat-option
-                  *ngFor="let opt of gameConfig?.rowOptions"
+                  *ngFor="let opt of rowOptions"
                   [value]="opt"
                   >{{opt}}</mat-option
                 >
@@ -30,9 +30,9 @@
           <div class="col-sm-6 form-group">
             <mat-form-field appearance="fill" class="w-100">
               <mat-label>Columnas</mat-label>
-              <mat-select formControlName="cols">
+              <mat-select formControlName="cols" (selectionChange)="changeColumnas()">
                 <mat-option
-                  *ngFor="let opt of gameConfig?.colOptions"
+                  *ngFor="let opt of colOptions"
                   [value]="opt"
                   >{{opt}}</mat-option
                 >
