--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -50,7 +50,7 @@
   </mat-card>
 
   <div class="d-flex justify-content-center mt-5">
-    <button class="btn btn-success btn-lg" (click)="jugar()">
+    <button class="btn btn-play btn-lg" (click)="jugar()">
       <fa-icon [icon]="faPlay" class="mr-2"></fa-icon>
       Jugar!
     </button>
