--- a/src/app/pages/inicio/inicio.component.css
+++ b/src/app/pages/inicio/inicio.component.css
@@ -1,5 +1,4 @@
 .card-container {
-  margin-top: 5%;
   margin-left: 20%;
   margin-right: 20%;
 }
@@ -13,6 +12,15 @@
   padding-left: 10%;
   padding-top: 20px;
   padding-right: 10%;
+}
+
+.mat-error {
+  color: #e07a5f;
+}
+
+.btn-play {
+  background-color: #AFEED3;
+  color: #000;
 }
 
 @media (max-width: 650px) {
