--- a/src/app/pages/ranking/ranking.component.html
+++ b/src/app/pages/ranking/ranking.component.html
@@ -15,7 +15,7 @@
 
       <!-- Mensaje Error  -->
       <div
-        class="alert alert-info text-center"
+        class="alert alert-warning text-center"
         *ngIf="mensajeErrorHttp.length > 0"
       >
         <strong>{{ mensajeErrorHttp }}</strong>
@@ -68,7 +68,7 @@
     </mat-card-content>
   </mat-card>
   <div class="d-flex justify-content-center">
-    <button class="btn btn-info btn-lg mt-3" routerLink="/inicio">
+    <button class="btn btn-action btn-lg mt-3" routerLink="/inicio">
       <fa-icon [icon]="faHome"></fa-icon>
       Inicio
     </button>
