--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
 <nav>
-  <img src="assets/images/logo_memoria.png" alt="logo-app" />
+  <fa-icon [icon]="faGamepad" class="mr-2"></fa-icon>
   Juego Memoria 
 </nav>
